--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,17 @@
 #Mail
-spring.mail.host=${MAIL_HOST}
-spring.mail.port=${MAIL_PORT}
-spring.mail.username=${MAIL_USERNAME}
-spring.mail.password=${MAIL_PASSWORD}
+spring.mail.host=spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=tsunyinho1996@gmail.com
+spring.mail.password=exwkcvneyutndgop
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout = 5000
 spring.mail.properties.mail.smtp.timeout = 5000
 spring.mail.properties.mail.smtp.writetimeout = 5000
 spring.mail.properties.mail.debug=true
+
+
+#spring.mail.host=${MAIL_HOST}
+#spring.mail.port=${MAIL_PORT}
+#spring.mail.username=${MAIL_USERNAME}
+#spring.mail.password=${MAIL_PASSWORD}
