application properties bug fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Mail
-spring.mail.host=spring.mail.host=smtp.gmail.com
+spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=tsunyinho1996@gmail.com
 spring.mail.password=exwkcvneyutndgop
